gcc/testsuite/g++.dg/other/label1.C
//PR c++/27820

void foo()
{
    L: L: ; // { dg-error "duplicate label" }
}

